# inmobiliariaAuto

./: .dockerignore  .env.example  .gitignore  ARRANCAR.bat  ARRANQUE.md  DESPLIEGUE.md  PARAR.bat  README.md  docker-compose.yml  pyproject.toml  requirements.txt  resumen.md
.claude/: launch.json
backend/: Dockerfile  main.py
backend/api/: config.py  costes.py  inmuebles.py  jobs.py  perfiles.py  portales.py
backend/dominio/: motor_financiero.py  motor_scoring.py
backend/integraciones/: openclaw_client.py
backend/modelos/: analisis.py  base.py  configuracion.py  costes.py  enumeraciones.py  metricas.py  openclaw.py  pipeline.py  score.py
backend/nucleo/: basedatos.py  config.py
backend/repositorios/: analisis.py  anuncios.py  base.py  busquedas.py  config_mercado.py  configuracion_pais.py  inmuebles.py  jobs.py  metricas.py  paises.py  perfiles.py  portales.py  scores.py  sesiones.py  uso_tokens.py
backend/servicios/: analista_cualitativo.py  calculo_financiero.py  calculo_scoring.py  constructor_prompt.py  conversion.py  (+6 more)
docs/: DECISIONES.md  OPENCLAW_COSTES.md  OPENCLAW_SESIONES.md  OPENCLAW_TELEGRAM.md  PROMPT_PARA_OPENCLAW.md
frontend/: .dockerignore  Dockerfile  docker-entrypoint-auth.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json
scripts/: adaptador_openclaw_vps.py  aplicar_migraciones.py  cargar_config_mercado.py  demo_datos_visuales.py  openclaw-adaptador.service  probar_analista.py
(+48 files in other folders)
