[project]
name = "inmobiliaria-sourcing"
version = "0.1.0"
description = "SaaS de sourcing y análisis de inversión inmobiliaria"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E,F: pyflakes/pycodestyle. I: imports ordenados. UP: modernización.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # la longitud la controla el formateador

[tool.ruff.lint.isort]
known-first-party = ["backend"]
